src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail41.jova

class Main {

  public int main() {
    bool test;
    bool test2;
    int x;
    bool boolean;
    int integer;
    int value;

    // relation
    value = 5;
    test = 2 > 3;
    test = 2 > value;
    test = value > 3;
    test = value > value;
    test = 2 + 5 > 3 + 8;
    test = 2 + 5 > value + 8;
    test = value + 5 > 3 + value;
    test = 2 < 3;
    test = value < 3;
    test = 2 < value;
    test = value < value;
    test = 2 + 5 < 3 + 8;
    test = value + 5 < 3 + value;
    test = 2 <= 3;
    test = value <= 3;
    test = 2 <= value;
    test = 2 + 5 >= 3 + 8;
    test = 2 != 3;
    test = value != 3;
    test = 2 != value;

    // arithmetic
    integer = 3;
    x = 2 + 3;
    x = 2 + integer;
    x = integer + 3;
    x = integer - integer;
    x = 3 - 2;
    x = integer - 2;
    x = 3 - integer;
    x = 4 / integer;
    x = integer / 3;
    x = integer / integer;
    x = 4 / 3;
    x = integer % 3;
    x = 4 % 3;
    x = integer % integer;
    x = 4 * 3;
    x = integer * 3;
    x = 4 * integer;
    x = integer * integer;

    //logic
    boolean = false;
    test2 = !(true);
    test2 = !(false);
    test2 = !(boolean);
    test2 = !(false);
    test2 = true && false;
    test2 = true && boolean;
    test2 = true || false;
    test2 = true || boolean;
    test2 = boolean || false;
    test2 = boolean || boolean;

    // == !=

    boolean = nix == nix;
    boolean = nix != nix;

    return 0;
  }

}